# rpi-kb

./: .gitignore  LICENSE  README.md  build_container.bash  eduroam.bash  setup.bash  setup_part1.bash  setup_part2.bash  setup_x11.bash  slideshows.md
backup/: backup.md  commands.bash
eduroam/: eduroam.bash  eduroam.md
eduroam/working_files/: eduroam  wpa_supplicant.conf
network/: disable_forwarding.bash  enable_forwarding.bash  network_router.md
networking/: BuriedPipeNetworkSetup.md  general_networking.md
ubuntu/: README.md  install_pi5_libcamera.bash  install_ubuntu.md  pi5_camera.md  ubuntu.md
ubuntu/docker_ros/: Dockerfile  build_image.bash  create_examples.bash  docker_ros.md  rm_image.bash  setup_x11.bash  start.bash  stop.bash  test_camera.bash  vars.bash
ubuntu/docker_ros_jazzy/: .env.example  Dockerfile  QUICKSTART.md  README.md  bashrc_additions.sh  build_container.bash  camera_launch.py  camera_publisher.py  docker-compose.yml  docker_ros_jazzy.md  entrypoint.sh  install_docker.bash  install_ros_jazzy.sh  ros_helper.sh  run_container.bash  run_container.sh  run_gui_container.bash  setup.bash  setup1.bash  setup2.bash  setup_docker.sh  setup_part1.bash  setup_x11.bash  start.bash  stop.bash  test_camera.bash
ubuntu/docker_ros_jazzy/workspace/rpi_camera_example/: README.md  package.xml  setup.py
ubuntu/docker_ros_jazzy/workspace/rpi_camera_example/config/: camera_params.yaml
ubuntu/docker_ros_jazzy/workspace/rpi_camera_example/launch/: camera_launch.py
ubuntu/docker_ros_jazzy/workspace/rpi_camera_example/resource/: rpi_camera_example
(+14 files in other folders)
