<?xml version="1.0"?>
<package format="3">
  <name>rpi_camera_example</name>
  <version>0.1.0</version>
  <description>Example ROS Jazzy package for Raspberry Pi camera</description>
  
  <maintainer email="user@example.com">RPI User</maintainer>
  
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>